[tool.poetry]
name = "text2sql-backend"
version = "0.1.0"
description = ""
authors = ["Rami <rami.awar.ra@gmail.com>"]
readme = "README.md"
packages = [{include = "text2sql_backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.100.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
llama-index = "^0.8.16"
sqlparse = "^0.4.3"
psycopg2 = "^2.9.6"
pygments-pprint-sql = "^0.1.0"
sql-formatter = "^0.6.2"
pytest = "^6.2.4"
pymysql = "^1.0.3"
cryptography = "^40.0.2"
sse-starlette = "^1.6.0"
sqlalchemy = "^2.0.13"
rapidfuzz = "^3.0.0"
psycopg = {extras = ["pool"], version = "^3.1.9"}
sql-metadata = "^2.8.0"
tiktoken = "^0.4.0"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
jupyterlab = "^3.6.3"
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
