[tool.poetry]
name = "text2sql-backend"
version = "0.1.0"
description = ""
authors = ["Rami <rami.awar.ra@gmail.com>"]
readme = "README.md"
packages = [{include = "text2sql_backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.100.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
llama-index = "^0.9.42.post2"
sqlparse = "^0.4.3"
psycopg2 = "^2.9.6"
pygments-pprint-sql = "^0.1.0"
sql-formatter = "^0.6.2"
pymysql = "^1.0.3"
cryptography = "^40.0.2"
sse-starlette = "^1.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
rapidfuzz = "^3.0.0"
psycopg = {extras = ["pool"], version = "^3.1.9"}
sql-metadata = "^2.8.0"
tiktoken = "^0.4.0"
nltk = "^3.8.1"
pyvis = "^0.3.2"
pre-commit = "^3.4.0"
pydantic = "2.4.2"
openai = "^1.11.0"
python-multipart = "^0.0.9"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyinstaller = "^5.10.1"
pytest = "^8.0.2"
jupyterlab = "^4.0.5"
mypy = "^1.6.1"
cx-freeze = "^6.15.14"
pytest-asyncio = "^0.23.5"


[tool.ruff]
ignore = ["E501"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
exclude = [
    '^bruno/*$',  # TOML literal string (single-quotes, no escaping necessary)
    "^notebooks/*$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
    "^scripts/*$",
    "^hooks/*$",
    "^notebooks/*$",
]