[tool.poetry]
name = "text2sql-backend"
version = "0.1.0"
description = ""
authors = ["Rami <rami.awar.ra@gmail.com>"]
readme = "README.md"
packages = [{include = "text2sql_backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.100.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
llama-index = "^0.9.42.post2"
psycopg2-binary = "^2.9.9"
pygments-pprint-sql = "^0.1.0"
sql-formatter = "^0.6.2"
pymysql = "^1.0.3"
cryptography = "^40.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
rapidfuzz = "^3.0.0"
psycopg = {extras = ["pool"], version = "^3.1.9"}
tiktoken = "^0.4.0"
pydantic = "2.4.2"
openai = "^1.11.0"
python-multipart = "^0.0.9"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.4.0"
pyinstaller = "^5.10.1"
pytest = "^8.0.2"
jupyterlab = "^4.0.5"
mypy = "^1.6.1"
cx-freeze = "^6.15.14"
pytest-asyncio = "^0.23.5"
types-pygments = "^2.17.0.20240310"


[tool.ruff]
ignore = ["E501"]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = "pydantic.mypy"

show_error_codes = true

disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = false

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unused_configs = true
warn_return_any = false
warn_unreachable = true

exclude = [
    '^bruno/*$',  # TOML literal string (single-quotes, no escaping necessary)
    "^notebooks/*$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
    "^scripts/*$",
    "^hooks/*$",
    "^notebooks/*$",
    "^__pycache__/*$",
    "^venv/*$",
    "^build/*$",
]

[[tool.mypy.overrides]]
module = [
    "async_asgi_testclient",
    # https://github.com/hephex/asyncache/issues/14
    "asyncache",
    "deepmerge",
]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pylint.messages_control]
max-line-length = 120
disable = ["missing-class-docstring", "missing-function-docstring", "invalid-name", "unspecified-encoding", "missing-module-docstring"]
